JEKT-2083 Updated Select fields gem to include all the AFKO fields 🔁 Modified     - Pipeline        - SAP_MD_MFG_ORDER_ATL_BBL_BBN_BWI_HM2_HMD_MBP_MRS_P01_SVS     - Dataset        - MD_MFG_ORDER

--- a/src/datasets/MD_MFG_ORDER/pbt_aspects.yml
+++ b/src/datasets/MD_MFG_ORDER/pbt_aspects.yml
@@ -408,3 +408,549 @@ schema:
       description: ''
       mappings: []
       tags: []
+  - name: ORDR_RTNG_NUM
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: MRP_CNTRLLR_CD
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: PRD_SPVSR_CD
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: ACT_RLSE_DTTM
+    type: timestamp
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: PLAN_RLSE_DTTM
+    type: timestamp
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: SCH_REL_DTTM
+    type: timestamp
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: PRDTN_END_DTTM
+    type: timestamp
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: END_DTTM
+    type: timestamp
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: SCHD_END_DTTM
+    type: timestamp
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: ACT_STRT_DTTM
+    type: timestamp
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: STRT_DTTM
+    type: timestamp
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: SCHD_STRT_DTTM
+    type: timestamp
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: CNFRMD_SCRP_QTY
+    type: decimal(18,4)
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: CNFRMD_YLD_QTY
+    type: decimal(18,4)
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: RTNG_GRP_CNTR_NUM
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: RTNG_GRP_CD
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: RTNG_TYP_CD
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: RSRVTN_NUM
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: BOM_ALT_NUM
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: BOM_NUM
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: BOM_CAT_CD
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: MATL_NUM
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: TOT_ORDR_QTY
+    type: decimal(18,4)
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: TOT_SCRAP_QTY_IN_ORDR
+    type: decimal(18,4)
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: BASE_UOM
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: APPL_OF_THE_TASK_LIST
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: TASK_LIST_USG
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: MAX_LOT_SIZE
+    type: decimal(18,4)
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: TASK_LIST_UOM
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: MIN_LOT_SIZE
+    type: decimal(18,4)
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: CHG_NUM1
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: RESP_PLNR_GRP_OR_DEPT
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: LOT_SIZE_DIVSR
+    type: decimal(18,4)
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: MATL_NUM1
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: BILL_OF_MATL_STS
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: BASE_QTY
+    type: decimal(18,4)
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: BASE_UNIT_OF_MEAS
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: CHG_NUM2
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: BOM_USG
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: FROM_LOT_SIZE
+    type: decimal(18,4)
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: TO_LOT_SIZE
+    type: decimal(18,4)
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: SCHDLNG_MRGN_KEY_FOR_FLOATS
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: SCHDLNG_TYPE
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: FLOAT_BEF_PRDTN
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: FLOAT_AFTER_PRDTN
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: RLSE_PER
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: CHG_TO_SCHD_DT_IN
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: ID_OF_THE_CAPY_RQR_REC
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: PROJ_DEF
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: INTRNL_CNTR1
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: INTRNL_CNTR2
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: CNTR_FOR_ADDL_CRITA
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: INSP_LOT_NUM
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: COST_VRNT_FOR_PLAN_COSTS
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: COST_VRNT_FOR_ACTL_COSTS
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: CMPLT_CNFRM_NUM_FOR_THE_OPR
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: INTRNL_CNTR3
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: CNFG
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: OBJ_ID_OF_THE_RSRS1
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: OBJ_ID_OF_THE_RSRS2
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: LVL
+    type: decimal(18,4)
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: PATH1
+    type: decimal(18,4)
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: PATH2
+    type: decimal(18,4)
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: NUM_OF_RESV
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: ORDR_ITM_NUM
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: LEFT_NODE_IN_CLCTV_ORDR
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: RIGHT_NODE_OF_CLCTV_ORDR
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: CNFRM_DEG_OF_PRCSG
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: RTG_NUM_OF_OPS_IN_THE_ORDR
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: GENL_CNTR_FOR_ORDR
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: RTG_EXPLS_DTTM
+    type: timestamp
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: VLD_FROM_DTTM
+    type: timestamp
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: VLD_FROM_DTTM1
+    type: timestamp
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: BOM_EXPLS_TFR_DTTM
+    type: timestamp
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: FIN_DTTM
+    type: timestamp
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: FCST_STRT_DTTM
+    type: timestamp
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: SCHD_FCST_FIN_DTTM
+    type: timestamp
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: SCHD_FCST_STRT_DTTM
+    type: timestamp
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
