JEKT-2191 SAP Pipeline ❇️ New     - Dataset        - DS_SAP_01_LFM1     - Pipeline        - SAP_MD_SUP_PRCHSNG_ORG
🔁 Modified
    - Dataset
       - MD_SUP_PRCHSNG_ORG

--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -3155,6 +3155,22 @@ pipelines:
       - datasets/MD_SLS_ORDR_SCHED_LINE_DELV
     subgraphs: []
     dependencies: {}
+  pipelines/SAP_MD_SUP_PRCHSNG_ORG:
+    name: SAP_MD_SUP_PRCHSNG_ORG
+    description: ''
+    author: mbolado1@its.jnj.com
+    mode: batch
+    artefactID: ''
+    language: python
+    createdAt: '2023-05-30 14:10:32'
+    modifiedAt: '2023-05-30 14:43:04'
+    datasets:
+      inputs:
+      - datasets/DS_SAP_01_LFM1
+      outputs:
+      - datasets/MD_SUP_PRCHSNG_ORG
+    subgraphs: []
+    dependencies: {}
 datasets:
   datasets/MD_HU_SER:
     name: MD_HU_SER
@@ -4646,7 +4662,7 @@ datasets:
     description: ''
     author: skostadi@its.jnj.com
     createdAt: '2023-03-20 18:20:04'
-    modifiedAt: '2023-03-20 18:20:04'
+    modifiedAt: '2023-05-30 14:43:04'
     mode: batch
     physicalDatasets:
       CDL_L1_Dev:
@@ -8751,6 +8767,21 @@ datasets:
         author: smille29@its.jnj.com
         createdAt: '2023-05-18 16:55:12'
         modifiedAt: '2023-05-18 16:55:12'
+  datasets/DS_SAP_01_LFM1:
+    name: DS_SAP_01_LFM1
+    description: ''
+    author: mbolado1@its.jnj.com
+    createdAt: '2023-05-30 14:21:47'
+    modifiedAt: '2023-05-30 14:21:47'
+    mode: batch
+    physicalDatasets:
+      CDL_L1_Dev:
+        fabricId: 32
+        datasetType: Database
+        description: ''
+        author: mbolado1@its.jnj.com
+        createdAt: '2023-05-30 14:21:47'
+        modifiedAt: '2023-05-30 14:21:47'
 templates: {}
 jobs:
   jobs/DEV_ATL_PIPELINE_JOB:
