JEKT-2191 SAP src_sys added to config (ATL, FSN, SVS) 🔁 Modified     - Pipeline        - SAP_MD_SUP_PRCHSNG_ORG

--- a/src/pipelines/SAP_MD_SUP_PRCHSNG_ORG/pbt_aspects.yml
+++ b/src/pipelines/SAP_MD_SUP_PRCHSNG_ORG/pbt_aspects.yml
@@ -1,16 +1,19 @@
 version: 1
 configurations:
 - GEU
+- FSN
+- ATL
 - MBP
 - BBA
-- hmd
 - BBL
+- HMD
 - P01
 - MRS
 - default
 - HCS
 - HM2
 - BBN
+- SVS
 - TAI
 - BWI
 dependencies: []
