JEKT-2191 JDE Pipeline development started ❇️ New     - Pipeline        - JDE_MD_SUP_PRCHSNG_ORG

--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -3171,6 +3171,22 @@ pipelines:
       - datasets/MD_SUP_PRCHSNG_ORG
     subgraphs: []
     dependencies: {}
+  pipelines/JDE_MD_SUP_PRCHSNG_ORG:
+    name: JDE_MD_SUP_PRCHSNG_ORG
+    description: ''
+    author: mbolado1@its.jnj.com
+    mode: batch
+    artefactID: ''
+    language: python
+    createdAt: '2023-05-30 15:15:40'
+    modifiedAt: '2023-05-30 15:35:45'
+    datasets:
+      inputs:
+      - datasets/DS_SAP_01_LFM1
+      outputs:
+      - datasets/MD_SUP_PRCHSNG_ORG
+    subgraphs: []
+    dependencies: {}
 datasets:
   datasets/MD_HU_SER:
     name: MD_HU_SER
