JEKT-2191 JDE Pipeline development 🔁 Modified     - Pipeline        - JDE_MD_SUP_PRCHSNG_ORG     - Dataset        - DS_SAP_01_LFM1        - MD_SUP_PRCHSNG_ORG
❇️ New
    - Dataset
       - DS_01_JDE_F0101
       - DS_01_JDE_F0401

--- a/src/datasets/DS_01_JDE_F0101/pbt_aspects.yml
+++ b/src/datasets/DS_01_JDE_F0101/pbt_aspects.yml
@@ -2,7 +2,7 @@ version: 1
 schema:
   type: struct
   fields:
-  - name: A6AN8
+  - name: ABAN8
     type: string
     nullable: true
     metadata:
@@ -16,546 +16,525 @@ schema:
       description: ''
       mappings: []
       tags: []
-  - name: A6APC
+  - name: ABALKY
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: A6MCUP
+  - name: ABTAX
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: A6OBAP
+  - name: ABALPH
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: A6AIDP
+  - name: ABDC
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: A6KCOP
+  - name: ABMCU
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: A6DCAP
+  - name: ABSIC
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: A6DTAP
+  - name: ABLNGP
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: A6CRRP
+  - name: ABAT1
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: A6TXA2
+  - name: ABCM
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: A6EXR2
+  - name: ABTAXC
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: A6HDPY
+  - name: ABAT2
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: A6TXA3
+  - name: ABAT3
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: A6EXR3
+  - name: ABAT4
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: A6TAWH
+  - name: ABAT5
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: A6PCWH
+  - name: ABATP
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: A6TRAP
+  - name: ABATR
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: A6SCK
+  - name: ABATPR
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: A6PYIN
+  - name: ABAB3
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: A6SNTO
+  - name: ABATE
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: A6AB1
+  - name: ABSBLI
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: A6FLD
+  - name: ABEFTB
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: A6SQNL
+  - name: ABAN81
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: A6CRCA
+  - name: ABAN82
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: A6AYPD
+  - name: ABAN83
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: A6APPD
+  - name: ABAN84
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: A6ABAM
+  - name: ABAN86
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: A6ABA1
+  - name: ABAN85
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: A6APRC
+  - name: ABAC01
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: A6MINO
+  - name: ABAC02
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: A6MAXO
+  - name: ABAC03
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: A6AN8R
+  - name: ABAC04
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: A6BADT
+  - name: ABAC05
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: A6CPGP
+  - name: ABAC06
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: A6ORTP
+  - name: ABAC07
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: A6INMG
+  - name: ABAC08
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: A6HOLD
+  - name: ABAC09
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: A6ROUT
+  - name: ABAC10
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: A6STOP
+  - name: ABAC11
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: A6ZON
+  - name: ABAC12
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: A6ANCR
+  - name: ABAC13
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: A6CARS
+  - name: ABAC14
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: A6DEL1
+  - name: ABAC15
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: A6DEL2
+  - name: ABAC16
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: A6LTDT
+  - name: ABAC17
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: A6FRTH
+  - name: ABAC18
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: A6INVC
+  - name: ABAC19
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: A6PLST
+  - name: ABAC20
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: A6WUMD
+  - name: ABAC21
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: A6VUMD
+  - name: ABAC22
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: A6PRP5
+  - name: ABAC23
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: A6EDPM
+  - name: ABAC24
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: A6EDCI
+  - name: ABAC25
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: A6EDII
+  - name: ABAC26
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: A6EDQD
+  - name: ABAC27
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: A6EDAD
+  - name: ABAC28
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: A6EDF1
+  - name: ABAC29
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: A6EDF2
+  - name: ABAC30
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: A6VI01
+  - name: ABGLBA
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: A6VI02
+  - name: ABPTI
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: A6VI03
+  - name: ABPDI
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: A6VI04
+  - name: ABMSGA
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: A6VI05
+  - name: ABRMK
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: A6MNSC
+  - name: ABTXCT
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: A6ATO
+  - name: ABTX2
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: A6RVNT
+  - name: ABALP1
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: A6URCD
+  - name: ABURCD
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: A6URDT
+  - name: ABURDT
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: A6URAT
+  - name: ABURAT
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: A6URAB
+  - name: ABURAB
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: A6URRF
+  - name: ABURRF
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: A6USER
+  - name: ABUSER
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: A6PID
+  - name: ABPID
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: A6JOBN
+  - name: ABUPMJ
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: A6UPMJ
+  - name: ABJOBN
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: A6UPMT
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: A6ASN
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: A6CRMD
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: A6AVCH
+  - name: ABUPMT
     type: string
     nullable: true
     metadata:
