--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -3179,10 +3179,11 @@ pipelines:
     artefactID: ''
     language: python
     createdAt: '2023-05-30 15:15:40'
-    modifiedAt: '2023-05-30 15:35:45'
+    modifiedAt: '2023-05-30 16:18:34'
     datasets:
       inputs:
-      - datasets/DS_SAP_01_LFM1
+      - datasets/DS_01_JDE_F0101
+      - datasets/DS_01_JDE_F0401
       outputs:
       - datasets/MD_SUP_PRCHSNG_ORG
     subgraphs: []
@@ -4678,7 +4679,7 @@ datasets:
     description: ''
     author: skostadi@its.jnj.com
     createdAt: '2023-03-20 18:20:04'
-    modifiedAt: '2023-05-30 14:43:04'
+    modifiedAt: '2023-05-30 16:18:33'
     mode: batch
     physicalDatasets:
       CDL_L1_Dev:
@@ -8788,7 +8789,7 @@ datasets:
     description: ''
     author: mbolado1@its.jnj.com
     createdAt: '2023-05-30 14:21:47'
-    modifiedAt: '2023-05-30 14:21:47'
+    modifiedAt: '2023-05-30 16:00:30'
     mode: batch
     physicalDatasets:
       CDL_L1_Dev:
@@ -8798,6 +8799,36 @@ datasets:
         author: mbolado1@its.jnj.com
         createdAt: '2023-05-30 14:21:47'
         modifiedAt: '2023-05-30 14:21:47'
+  datasets/DS_01_JDE_F0101:
+    name: DS_01_JDE_F0101
+    description: ''
+    author: mbolado1@its.jnj.com
+    createdAt: '2023-05-30 16:03:15'
+    modifiedAt: '2023-05-30 16:04:01'
+    mode: batch
+    physicalDatasets:
+      CDL_L1_Dev:
+        fabricId: 32
+        datasetType: Database
+        description: ''
+        author: mbolado1@its.jnj.com
+        createdAt: '2023-05-30 16:03:15'
+        modifiedAt: '2023-05-30 16:03:15'
+  datasets/DS_01_JDE_F0401:
+    name: DS_01_JDE_F0401
+    description: ''
+    author: mbolado1@its.jnj.com
+    createdAt: '2023-05-30 16:05:32'
+    modifiedAt: '2023-05-30 16:05:32'
+    mode: batch
+    physicalDatasets:
+      CDL_L1_Dev:
+        fabricId: 32
+        datasetType: Database
+        description: ''
+        author: mbolado1@its.jnj.com
+        createdAt: '2023-05-30 16:05:32'
+        modifiedAt: '2023-05-30 16:05:32'
 templates: {}
 jobs:
   jobs/DEV_ATL_PIPELINE_JOB:
