--- a/src/datasets/MD_SUP_PRCHSNG_ORG/pbt_aspects.yml
+++ b/src/datasets/MD_SUP_PRCHSNG_ORG/pbt_aspects.yml
@@ -18,7 +18,7 @@ schema:
       tags: []
   - name: PRCHSNG_ORG_NUM
     type: string
-    nullable: true
+    nullable: false
     metadata:
       description: ''
       mappings: []
@@ -30,28 +30,7 @@ schema:
       description: ''
       mappings: []
       tags: []
-  - name: PRCH_BLK_IND
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: DEL_IND
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
   - name: CRNCY_CD
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: PMT_TERM_CD
     type: string
     nullable: true
     metadata:
@@ -72,70 +51,7 @@ schema:
       description: ''
       mappings: []
       tags: []
-  - name: PRC_PCDR_CD
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: PRC_CNTL_CD
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
   - name: EVAL_RCPT_SETLM_CD
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: RTRN_VEND_IND
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: CNFRM_CD
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: NM_OF_PRSN_RESP_CREAT_OBJ
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: GR_BAS_INVC_VERIF
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: AUTO_GNR_OF_PO_ALLW
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: AUTO_EVAL_RCPT_SETLM
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: OWN_EXPLN_OF_TERM_OF_PMT
     type: string
     nullable: true
     metadata:
